Add new PrinterType params and command sample usages for Kotlin and Java (deprecated).